# bsql

./: .gitignore  CREDO.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  format.txt
.bsql/queries/: .generation  .manifest  059048d22391b5bf.bitcode  059587840fcdf023.bitcode  07446b0936ca4a20.bitcode  07b341aa0ffa9253.bitcode  08ac222dfe40d7bd.bitcode  08f2c89d2bd676a8.bitcode  0bb3b44cf20b1fb8.bitcode  0d0e4d1bc2498d75.bitcode  124261d33eaede28.bitcode  12c13285c18e916d.bitcode  12efd66d21b695fa.bitcode  13540110645df71a.bitcode  136718c2a32bec3c.bitcode  1433b6ed967ee129.bitcode  15d91ce755f324f4.bitcode  15eca96d16dedacc.bitcode  1745e8010d161634.bitcode  18346d4b0842dc09.bitcode  184ec336b1e78eaf.bitcode  194012780ae219d8.bitcode  1a7b632f229bad3e.bitcode  1b379d63f333b3d8.bitcode  1ca7b47e7d187e4a.bitcode  1f577113a7d12a09.bitcode  1f6bc8cfc01c0f78.bitcode  2132d6e391cfa010.bitcode  2209d32e85f91d94.bitcode  224127c4ad4e8384.bitcode  22715a1255a60c42.bitcode  22c82103a65f89d7.bitcode  23eb458e103108b4.bitcode  2421b3acedccdd30.bitcode  25f73d8187760a63.bitcode  2681d470891946aa.bitcode  27ec15889c433118.bitcode  28147dc94c853215.bitcode  2a607009d28c5975.bitcode  2a6ae27c1c5ea1ba.bitcode  (+208 more)
.github/workflows/: ci.yml
bench/: .gitignore  Cargo.toml  README.md  run_pg.sh  run_quick.sh
bench/benches/: pg_complex.rs  pg_fetch_many.rs  pg_fetch_one.rs  pg_insert.rs  sqlite_complex.rs  sqlite_fetch_many.rs  sqlite_fetch_one.rs  sqlite_insert.rs
bench/c/: Makefile  pg_bench.c  sqlite_bench.c
bench/go/: go.mod  go.sum
bench/go/mem/: main.go
bench/go/pg/: main.go
bench/go/sqlite/: main.go
bench/mem/: bench_bsql_perf.rs  bench_diesel_perf.rs  bench_sqlx_perf.rs  bsql_pg.rs  c_pg.c  mem_c_pg  run_all.sh
bench/setup/: pg_setup.sql  sqlite_setup.sql
bsql/: Cargo.toml
bsql-core/: Cargo.toml
bsql-core/src/: listener.rs  pool.rs  stream.rs  types.rs
bsql-macros/: Cargo.toml
bsql-macros/src/: codegen.rs
bsql/tests/: basic.rs  listener.rs  streaming.rs  transactions.rs
crates/bsql/: Cargo.toml
crates/bsql-arena/: Cargo.toml
crates/bsql-arena/src/: lib.rs
crates/bsql-cli/src/: cache.rs  integrity.rs  main.rs  migrate.rs  verify.rs
crates/bsql-core/: Cargo.toml
crates/bsql-core/src/: error.rs  executor.rs  lib.rs  listener.rs  pool.rs  singleflight.rs  sql.rs  sqlite_pool.rs  stream.rs  test_support.rs  transaction.rs  types.rs  util.rs
crates/bsql-driver/: Cargo.toml
crates/bsql-driver-postgres/: Cargo.toml
crates/bsql-driver-postgres/proptest-regressions/: proto.txt  types.txt
crates/bsql-driver-postgres/src/: async_conn.rs  async_io.rs  auth.rs  codec.rs  conn.rs  lib.rs  oid_map.rs  pool.rs  proto.rs  stmt_cache.rs  sync_conn.rs  sync_io.rs  tls_common.rs  tls_sync.rs  types.rs
crates/bsql-driver-postgres/tests/: integration.rs
crates/bsql-driver-sqlite/: Cargo.toml
crates/bsql-driver-sqlite/src/: codec.rs  conn.rs  ffi.rs  lib.rs  pool.rs
crates/bsql-driver/src/: arena.rs  auth.rs  codec.rs  conn.rs  lib.rs  pool.rs  proto.rs
crates/bsql-driver/tests/: integration.rs
crates/bsql-macros/: Cargo.toml
crates/bsql-macros/.bsql/sorts/: TicketSort.txt
crates/bsql-macros/fixtures/: test_schema.sql  test_seed.sql
crates/bsql-macros/fixtures/subdir/: nested.sql
crates/bsql-macros/src/: codegen.rs  codegen_sqlite.rs  connection.rs  dynamic.rs  lib.rs  offline.rs  parse.rs  pg_enum.rs  sort_enum.rs  suggest.rs  test_macro.rs  types.rs  types_sqlite.rs  validate.rs  validate_sqlite.rs
crates/bsql-macros/tests/fixtures/: alt_location.sql
crates/bsql/src/: lib.rs
crates/bsql/tests/: README.md  async_mode.rs  basic.rs  dynamic.rs  listener.rs  read_write_split.rs  singleflight.rs  sqlite_basic.rs  sqlite_query.rs  transactions.rs  types.rs
examples/: Cargo.toml  README.md  pg_async.rs  pg_basic.rs  pg_batch_insert.rs  pg_dynamic.rs  pg_jsonb.rs  pg_keyset_pagination.rs  pg_listener.rs  pg_n_plus_one.rs  pg_query_as.rs  pg_singleflight.rs  pg_sort_enum.rs  pg_streaming.rs  pg_sync.rs  pg_testing.rs  pg_transactions.rs  sqlite_basic.rs  sqlite_dynamic.rs  sqlite_keyset_pagination.rs  sqlite_query_as.rs  sqlite_testing.rs
examples/.bsql/sorts/: TicketSort.txt
sasql/: Cargo.toml
sasql-core/: Cargo.toml
sasql-core/src/: error.rs  executor.rs  lib.rs  pool.rs  types.rs
sasql-macros/: Cargo.toml
sasql-macros/src/: codegen.rs  connection.rs  lib.rs  offline.rs  parse.rs  pg_enum.rs  sql_norm.rs  types.rs  validate.rs
sasql/src/: lib.rs
sasql/tests/: basic.rs  v02_types.rs
sasql/tests/compile_fail/: alter_rejected.rs  alter_rejected.stderr  comment_only.rs  comment_only.stderr  cte_without_dml.rs  cte_without_dml.stderr  (+37 more)
tests/: COVERAGE.md  README.md  docker-compose.yml  setup.sql
(+25 files in other folders)
